// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover when default should render correctly opened 1`] = `
Array [
  <button
    className="is-active"
    onClick={[Function]}
    type="button"
  >
    Trigger
  </button>,
  @keyframes animation-0 {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

.emotion-2 {
  position: absolute;
  background: #f3f3f3;
  border-radius: 0.375rem;
  box-shadow: 0 0 0 0.0625rem rgba(12,13,13,0.15),0 0.1875rem 0.375rem rgba(12,13,13,0.15);
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  -webkit-animation: animation-0 200ms cubic-bezier(0,0,0.2,1) forwards;
  animation: animation-0 200ms cubic-bezier(0,0,0.2,1) forwards;
}

.emotion-2[data-placement^='top'] {
  margin-bottom: 0.75rem;
}

.emotion-2[data-placement^='bottom'] {
  margin-top: 0.75rem;
}

.emotion-2[data-placement^='left'] {
  margin-right: 0.75rem;
}

.emotion-2[data-placement^='right'] {
  margin-left: 0.75rem;
}

.emotion-2::after,
.emotion-2::before {
  border: solid transparent;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.emotion-2[data-placement^='top'] .emotion-1::after,
.emotion-2[data-placement^='top'] .emotion-1::before {
  top: 100%;
  left: 50%;
}

.emotion-2[data-placement^='top'] .emotion-1::after {
  border-top-color: #f3f3f3;
  margin-left: -6px;
}

.emotion-2[data-placement^='top'] .emotion-1::after {
  border-top-color: #f3f3f3;
}

.emotion-2[data-placement^='top'] .emotion-1::before {
  border-top-color: rgba(12,13,13,0.15);
  margin-left: -7px;
}

.emotion-2[data-placement^='bottom'] .emotion-1::after,
.emotion-2[data-placement^='bottom'] .emotion-1::before {
  bottom: 100%;
  left: 50%;
}

.emotion-2[data-placement^='bottom'] .emotion-1::after {
  border-bottom-color: #f3f3f3;
  margin-left: -6px;
}

.emotion-2[data-placement^='bottom'] .emotion-1::after {
  border-bottom-color: #f3f3f3;
}

.emotion-2[data-placement^='bottom'] .emotion-1::before {
  border-bottom-color: rgba(12,13,13,0.15);
  margin-left: -7px;
}

.emotion-2[data-placement^='left'] .emotion-1::after,
.emotion-2[data-placement^='left'] .emotion-1::before {
  left: 100%;
  top: 50%;
}

.emotion-2[data-placement^='left'] .emotion-1::after {
  border-left-color: #f3f3f3;
  margin-top: -6px;
}

.emotion-2[data-placement^='left'] .emotion-1::after {
  border-left-color: #f3f3f3;
}

.emotion-2[data-placement^='left'] .emotion-1::before {
  border-left-color: rgba(12,13,13,0.15);
  margin-top: -7px;
}

.emotion-2[data-placement^='right'] .emotion-1::after,
.emotion-2[data-placement^='right'] .emotion-1::before {
  right: 100%;
  top: 50%;
}

.emotion-2[data-placement^='right'] .emotion-1::after {
  border-right-color: #f3f3f3;
  margin-top: -6px;
}

.emotion-2[data-placement^='right'] .emotion-1::after {
  border-right-color: #f3f3f3;
}

.emotion-2[data-placement^='right'] .emotion-1::before {
  border-right-color: rgba(12,13,13,0.15);
  margin-top: -7px;
}

.emotion-2[data-placement='top-start'] .emotion-1::before,
.emotion-2[data-placement='bottom-start'] .emotion-1::before,
.emotion-2[data-placement='top-start'] .emotion-1::after,
.emotion-2[data-placement='bottom-start'] .emotion-1::after {
  left: 18px;
}

.emotion-2[data-placement='left-start'] .emotion-1::before,
.emotion-2[data-placement='right-start'] .emotion-1::before,
.emotion-2[data-placement='left-start'] .emotion-1::after,
.emotion-2[data-placement='right-start'] .emotion-1::after {
  top: 18px;
}

.emotion-2[data-placement='top-end'] .emotion-1::before,
.emotion-2[data-placement='bottom-end'] .emotion-1::before,
.emotion-2[data-placement='top-end'] .emotion-1::after,
.emotion-2[data-placement='bottom-end'] .emotion-1::after {
  left: auto;
  right: 11px;
}

.emotion-2[data-placement='left-end'] .emotion-1::before,
.emotion-2[data-placement='right-end'] .emotion-1::before,
.emotion-2[data-placement='left-end'] .emotion-1::after,
.emotion-2[data-placement='right-end'] .emotion-1::after {
  top: auto;
  bottom: 11px;
}

.emotion-2[data-placement='top-end'] .emotion-1::before,
.emotion-2[data-placement='bottom-end'] .emotion-1::before {
  right: calc(11px - 1px);
}

.emotion-2[data-placement='left-end'] .emotion-1::before,
.emotion-2[data-placement='right-end'] .emotion-1::before {
  bottom: calc(11px - 1px);
}

.emotion-0::after,
.emotion-0::before {
  border: solid transparent;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.emotion-0::after {
  border-width: 6px;
}

.emotion-0::before {
  border-width: 7px;
}

<div
    className="emotion-2 emotion-3"
    data-placement="bottom-start"
  >
    <span>
      Some content
    </span>
    <div
      className="emotion-0 emotion-1"
    />
  </div>,
]
`;

exports[`Popover when light should render correctly opened 1`] = `
Array [
  <button
    className="is-active"
    onClick={[Function]}
    type="button"
  >
    Trigger
  </button>,
  @keyframes animation-0 {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

@keyframes animation-0 {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

.emotion-0::after,
.emotion-0::before {
  border: solid transparent;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.emotion-0::after {
  border-width: 6px;
}

.emotion-0::before {
  border-width: 7px;
}

.emotion-2 {
  position: absolute;
  background: #f3f3f3;
  border-radius: 0.375rem;
  box-shadow: 0 0 0 0.0625rem rgba(12,13,13,0.15),0 0.1875rem 0.375rem rgba(12,13,13,0.15);
  background-color: #fff;
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  -webkit-animation: animation-0 200ms cubic-bezier(0,0,0.2,1) forwards;
  animation: animation-0 200ms cubic-bezier(0,0,0.2,1) forwards;
}

.emotion-2[data-placement^='top'] {
  margin-bottom: 0.75rem;
}

.emotion-2[data-placement^='bottom'] {
  margin-top: 0.75rem;
}

.emotion-2[data-placement^='left'] {
  margin-right: 0.75rem;
}

.emotion-2[data-placement^='right'] {
  margin-left: 0.75rem;
}

.emotion-2::after,
.emotion-2::before {
  border: solid transparent;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.emotion-2[data-placement^='top'] .emotion-1::after,
.emotion-2[data-placement^='top'] .emotion-1::before {
  top: 100%;
  left: 50%;
}

.emotion-2[data-placement^='top'] .emotion-1::after {
  border-top-color: #f3f3f3;
  margin-left: -6px;
}

.emotion-2[data-placement^='top'] .emotion-1::after {
  border-top-color: #f3f3f3;
}

.emotion-2[data-placement^='top'] .emotion-1::before {
  border-top-color: rgba(12,13,13,0.15);
  margin-left: -7px;
}

.emotion-2[data-placement^='bottom'] .emotion-1::after,
.emotion-2[data-placement^='bottom'] .emotion-1::before {
  bottom: 100%;
  left: 50%;
}

.emotion-2[data-placement^='bottom'] .emotion-1::after {
  border-bottom-color: #f3f3f3;
  margin-left: -6px;
}

.emotion-2[data-placement^='bottom'] .emotion-1::after {
  border-bottom-color: #f3f3f3;
}

.emotion-2[data-placement^='bottom'] .emotion-1::before {
  border-bottom-color: rgba(12,13,13,0.15);
  margin-left: -7px;
}

.emotion-2[data-placement^='left'] .emotion-1::after,
.emotion-2[data-placement^='left'] .emotion-1::before {
  left: 100%;
  top: 50%;
}

.emotion-2[data-placement^='left'] .emotion-1::after {
  border-left-color: #f3f3f3;
  margin-top: -6px;
}

.emotion-2[data-placement^='left'] .emotion-1::after {
  border-left-color: #f3f3f3;
}

.emotion-2[data-placement^='left'] .emotion-1::before {
  border-left-color: rgba(12,13,13,0.15);
  margin-top: -7px;
}

.emotion-2[data-placement^='right'] .emotion-1::after,
.emotion-2[data-placement^='right'] .emotion-1::before {
  right: 100%;
  top: 50%;
}

.emotion-2[data-placement^='right'] .emotion-1::after {
  border-right-color: #f3f3f3;
  margin-top: -6px;
}

.emotion-2[data-placement^='right'] .emotion-1::after {
  border-right-color: #f3f3f3;
}

.emotion-2[data-placement^='right'] .emotion-1::before {
  border-right-color: rgba(12,13,13,0.15);
  margin-top: -7px;
}

.emotion-2[data-placement='top-start'] .emotion-1::before,
.emotion-2[data-placement='bottom-start'] .emotion-1::before,
.emotion-2[data-placement='top-start'] .emotion-1::after,
.emotion-2[data-placement='bottom-start'] .emotion-1::after {
  left: 18px;
}

.emotion-2[data-placement='left-start'] .emotion-1::before,
.emotion-2[data-placement='right-start'] .emotion-1::before,
.emotion-2[data-placement='left-start'] .emotion-1::after,
.emotion-2[data-placement='right-start'] .emotion-1::after {
  top: 18px;
}

.emotion-2[data-placement='top-end'] .emotion-1::before,
.emotion-2[data-placement='bottom-end'] .emotion-1::before,
.emotion-2[data-placement='top-end'] .emotion-1::after,
.emotion-2[data-placement='bottom-end'] .emotion-1::after {
  left: auto;
  right: 11px;
}

.emotion-2[data-placement='left-end'] .emotion-1::before,
.emotion-2[data-placement='right-end'] .emotion-1::before,
.emotion-2[data-placement='left-end'] .emotion-1::after,
.emotion-2[data-placement='right-end'] .emotion-1::after {
  top: auto;
  bottom: 11px;
}

.emotion-2[data-placement='top-end'] .emotion-1::before,
.emotion-2[data-placement='bottom-end'] .emotion-1::before {
  right: calc(11px - 1px);
}

.emotion-2[data-placement='left-end'] .emotion-1::before,
.emotion-2[data-placement='right-end'] .emotion-1::before {
  bottom: calc(11px - 1px);
}

.emotion-2[data-placement^='top'] .emotion-1::after {
  border-top-color: #fff;
}

.emotion-2[data-placement^='bottom'] .emotion-1::after {
  border-bottom-color: #fff;
}

.emotion-2[data-placement^='left'] .emotion-1::after {
  border-left-color: #fff;
}

.emotion-2[data-placement^='right'] .emotion-1::after {
  border-right-color: #fff;
}

.emotion-2 [data-placement$='-end'] .emotion-1::before {
  right: calc(11px - 1px);
}

<div
    className="emotion-2 emotion-3"
    data-placement="bottom-start"
  >
    <span>
      Some content
    </span>
    <div
      className="emotion-0 emotion-1"
    />
  </div>,
]
`;

exports[`Popover when no arrow should render correctly opened 1`] = `
Array [
  <button
    className="is-active"
    onClick={[Function]}
    type="button"
  >
    Trigger
  </button>,
  @keyframes animation-0 {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

@keyframes animation-0 {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

.emotion-0 {
  position: absolute;
  background: #f3f3f3;
  border-radius: 0.375rem;
  box-shadow: 0 0 0 0.0625rem rgba(12,13,13,0.15),0 0.1875rem 0.375rem rgba(12,13,13,0.15);
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  -webkit-animation: animation-0 200ms cubic-bezier(0,0,0.2,1) forwards;
  animation: animation-0 200ms cubic-bezier(0,0,0.2,1) forwards;
}

.emotion-0[data-placement^='top'] {
  margin-bottom: 0.75rem;
}

.emotion-0[data-placement^='bottom'] {
  margin-top: 0.75rem;
}

.emotion-0[data-placement^='left'] {
  margin-right: 0.75rem;
}

.emotion-0[data-placement^='right'] {
  margin-left: 0.75rem;
}

.emotion-0::after,
.emotion-0::before {
  border: solid transparent;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.emotion-0[data-placement^='top'] .etvxp5h0::after,
.emotion-0[data-placement^='top'] .etvxp5h0::before {
  top: 100%;
  left: 50%;
}

.emotion-0[data-placement^='top'] .etvxp5h0::after {
  border-top-color: #f3f3f3;
  margin-left: -6px;
}

.emotion-0[data-placement^='top'] .etvxp5h0::after {
  border-top-color: #f3f3f3;
}

.emotion-0[data-placement^='top'] .etvxp5h0::before {
  border-top-color: rgba(12,13,13,0.15);
  margin-left: -7px;
}

.emotion-0[data-placement^='bottom'] .etvxp5h0::after,
.emotion-0[data-placement^='bottom'] .etvxp5h0::before {
  bottom: 100%;
  left: 50%;
}

.emotion-0[data-placement^='bottom'] .etvxp5h0::after {
  border-bottom-color: #f3f3f3;
  margin-left: -6px;
}

.emotion-0[data-placement^='bottom'] .etvxp5h0::after {
  border-bottom-color: #f3f3f3;
}

.emotion-0[data-placement^='bottom'] .etvxp5h0::before {
  border-bottom-color: rgba(12,13,13,0.15);
  margin-left: -7px;
}

.emotion-0[data-placement^='left'] .etvxp5h0::after,
.emotion-0[data-placement^='left'] .etvxp5h0::before {
  left: 100%;
  top: 50%;
}

.emotion-0[data-placement^='left'] .etvxp5h0::after {
  border-left-color: #f3f3f3;
  margin-top: -6px;
}

.emotion-0[data-placement^='left'] .etvxp5h0::after {
  border-left-color: #f3f3f3;
}

.emotion-0[data-placement^='left'] .etvxp5h0::before {
  border-left-color: rgba(12,13,13,0.15);
  margin-top: -7px;
}

.emotion-0[data-placement^='right'] .etvxp5h0::after,
.emotion-0[data-placement^='right'] .etvxp5h0::before {
  right: 100%;
  top: 50%;
}

.emotion-0[data-placement^='right'] .etvxp5h0::after {
  border-right-color: #f3f3f3;
  margin-top: -6px;
}

.emotion-0[data-placement^='right'] .etvxp5h0::after {
  border-right-color: #f3f3f3;
}

.emotion-0[data-placement^='right'] .etvxp5h0::before {
  border-right-color: rgba(12,13,13,0.15);
  margin-top: -7px;
}

.emotion-0[data-placement='top-start'] .etvxp5h0::before,
.emotion-0[data-placement='bottom-start'] .etvxp5h0::before,
.emotion-0[data-placement='top-start'] .etvxp5h0::after,
.emotion-0[data-placement='bottom-start'] .etvxp5h0::after {
  left: 18px;
}

.emotion-0[data-placement='left-start'] .etvxp5h0::before,
.emotion-0[data-placement='right-start'] .etvxp5h0::before,
.emotion-0[data-placement='left-start'] .etvxp5h0::after,
.emotion-0[data-placement='right-start'] .etvxp5h0::after {
  top: 18px;
}

.emotion-0[data-placement='top-end'] .etvxp5h0::before,
.emotion-0[data-placement='bottom-end'] .etvxp5h0::before,
.emotion-0[data-placement='top-end'] .etvxp5h0::after,
.emotion-0[data-placement='bottom-end'] .etvxp5h0::after {
  left: auto;
  right: 11px;
}

.emotion-0[data-placement='left-end'] .etvxp5h0::before,
.emotion-0[data-placement='right-end'] .etvxp5h0::before,
.emotion-0[data-placement='left-end'] .etvxp5h0::after,
.emotion-0[data-placement='right-end'] .etvxp5h0::after {
  top: auto;
  bottom: 11px;
}

.emotion-0[data-placement='top-end'] .etvxp5h0::before,
.emotion-0[data-placement='bottom-end'] .etvxp5h0::before {
  right: calc(11px - 1px);
}

.emotion-0[data-placement='left-end'] .etvxp5h0::before,
.emotion-0[data-placement='right-end'] .etvxp5h0::before {
  bottom: calc(11px - 1px);
}

<div
    className="emotion-0 emotion-1"
    data-placement="bottom-start"
  >
    <span>
      Some content
    </span>
  </div>,
]
`;

exports[`Popover when placement bottom should render correctly opened 1`] = `
Array [
  <button
    className="is-active"
    onClick={[Function]}
    type="button"
  >
    Trigger
  </button>,
  @keyframes animation-0 {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

@keyframes animation-0 {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

.emotion-2 {
  position: absolute;
  background: #f3f3f3;
  border-radius: 0.375rem;
  box-shadow: 0 0 0 0.0625rem rgba(12,13,13,0.15),0 0.1875rem 0.375rem rgba(12,13,13,0.15);
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  -webkit-animation: animation-0 200ms cubic-bezier(0,0,0.2,1) forwards;
  animation: animation-0 200ms cubic-bezier(0,0,0.2,1) forwards;
}

.emotion-2[data-placement^='top'] {
  margin-bottom: 0.75rem;
}

.emotion-2[data-placement^='bottom'] {
  margin-top: 0.75rem;
}

.emotion-2[data-placement^='left'] {
  margin-right: 0.75rem;
}

.emotion-2[data-placement^='right'] {
  margin-left: 0.75rem;
}

.emotion-2::after,
.emotion-2::before {
  border: solid transparent;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.emotion-2[data-placement^='top'] .emotion-1::after,
.emotion-2[data-placement^='top'] .emotion-1::before {
  top: 100%;
  left: 50%;
}

.emotion-2[data-placement^='top'] .emotion-1::after {
  border-top-color: #f3f3f3;
  margin-left: -6px;
}

.emotion-2[data-placement^='top'] .emotion-1::after {
  border-top-color: #f3f3f3;
}

.emotion-2[data-placement^='top'] .emotion-1::before {
  border-top-color: rgba(12,13,13,0.15);
  margin-left: -7px;
}

.emotion-2[data-placement^='bottom'] .emotion-1::after,
.emotion-2[data-placement^='bottom'] .emotion-1::before {
  bottom: 100%;
  left: 50%;
}

.emotion-2[data-placement^='bottom'] .emotion-1::after {
  border-bottom-color: #f3f3f3;
  margin-left: -6px;
}

.emotion-2[data-placement^='bottom'] .emotion-1::after {
  border-bottom-color: #f3f3f3;
}

.emotion-2[data-placement^='bottom'] .emotion-1::before {
  border-bottom-color: rgba(12,13,13,0.15);
  margin-left: -7px;
}

.emotion-2[data-placement^='left'] .emotion-1::after,
.emotion-2[data-placement^='left'] .emotion-1::before {
  left: 100%;
  top: 50%;
}

.emotion-2[data-placement^='left'] .emotion-1::after {
  border-left-color: #f3f3f3;
  margin-top: -6px;
}

.emotion-2[data-placement^='left'] .emotion-1::after {
  border-left-color: #f3f3f3;
}

.emotion-2[data-placement^='left'] .emotion-1::before {
  border-left-color: rgba(12,13,13,0.15);
  margin-top: -7px;
}

.emotion-2[data-placement^='right'] .emotion-1::after,
.emotion-2[data-placement^='right'] .emotion-1::before {
  right: 100%;
  top: 50%;
}

.emotion-2[data-placement^='right'] .emotion-1::after {
  border-right-color: #f3f3f3;
  margin-top: -6px;
}

.emotion-2[data-placement^='right'] .emotion-1::after {
  border-right-color: #f3f3f3;
}

.emotion-2[data-placement^='right'] .emotion-1::before {
  border-right-color: rgba(12,13,13,0.15);
  margin-top: -7px;
}

.emotion-2[data-placement='top-start'] .emotion-1::before,
.emotion-2[data-placement='bottom-start'] .emotion-1::before,
.emotion-2[data-placement='top-start'] .emotion-1::after,
.emotion-2[data-placement='bottom-start'] .emotion-1::after {
  left: 18px;
}

.emotion-2[data-placement='left-start'] .emotion-1::before,
.emotion-2[data-placement='right-start'] .emotion-1::before,
.emotion-2[data-placement='left-start'] .emotion-1::after,
.emotion-2[data-placement='right-start'] .emotion-1::after {
  top: 18px;
}

.emotion-2[data-placement='top-end'] .emotion-1::before,
.emotion-2[data-placement='bottom-end'] .emotion-1::before,
.emotion-2[data-placement='top-end'] .emotion-1::after,
.emotion-2[data-placement='bottom-end'] .emotion-1::after {
  left: auto;
  right: 11px;
}

.emotion-2[data-placement='left-end'] .emotion-1::before,
.emotion-2[data-placement='right-end'] .emotion-1::before,
.emotion-2[data-placement='left-end'] .emotion-1::after,
.emotion-2[data-placement='right-end'] .emotion-1::after {
  top: auto;
  bottom: 11px;
}

.emotion-2[data-placement='top-end'] .emotion-1::before,
.emotion-2[data-placement='bottom-end'] .emotion-1::before {
  right: calc(11px - 1px);
}

.emotion-2[data-placement='left-end'] .emotion-1::before,
.emotion-2[data-placement='right-end'] .emotion-1::before {
  bottom: calc(11px - 1px);
}

.emotion-0::after,
.emotion-0::before {
  border: solid transparent;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.emotion-0::after {
  border-width: 6px;
}

.emotion-0::before {
  border-width: 7px;
}

<div
    className="emotion-2 emotion-3"
    data-placement="bottom"
  >
    <span>
      Some content
    </span>
    <div
      className="emotion-0 emotion-1"
    />
  </div>,
]
`;

exports[`Popover when placement bottom-end should render correctly opened 1`] = `
Array [
  <button
    className="is-active"
    onClick={[Function]}
    type="button"
  >
    Trigger
  </button>,
  @keyframes animation-0 {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

@keyframes animation-0 {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

.emotion-2 {
  position: absolute;
  background: #f3f3f3;
  border-radius: 0.375rem;
  box-shadow: 0 0 0 0.0625rem rgba(12,13,13,0.15),0 0.1875rem 0.375rem rgba(12,13,13,0.15);
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  -webkit-animation: animation-0 200ms cubic-bezier(0,0,0.2,1) forwards;
  animation: animation-0 200ms cubic-bezier(0,0,0.2,1) forwards;
}

.emotion-2[data-placement^='top'] {
  margin-bottom: 0.75rem;
}

.emotion-2[data-placement^='bottom'] {
  margin-top: 0.75rem;
}

.emotion-2[data-placement^='left'] {
  margin-right: 0.75rem;
}

.emotion-2[data-placement^='right'] {
  margin-left: 0.75rem;
}

.emotion-2::after,
.emotion-2::before {
  border: solid transparent;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.emotion-2[data-placement^='top'] .emotion-1::after,
.emotion-2[data-placement^='top'] .emotion-1::before {
  top: 100%;
  left: 50%;
}

.emotion-2[data-placement^='top'] .emotion-1::after {
  border-top-color: #f3f3f3;
  margin-left: -6px;
}

.emotion-2[data-placement^='top'] .emotion-1::after {
  border-top-color: #f3f3f3;
}

.emotion-2[data-placement^='top'] .emotion-1::before {
  border-top-color: rgba(12,13,13,0.15);
  margin-left: -7px;
}

.emotion-2[data-placement^='bottom'] .emotion-1::after,
.emotion-2[data-placement^='bottom'] .emotion-1::before {
  bottom: 100%;
  left: 50%;
}

.emotion-2[data-placement^='bottom'] .emotion-1::after {
  border-bottom-color: #f3f3f3;
  margin-left: -6px;
}

.emotion-2[data-placement^='bottom'] .emotion-1::after {
  border-bottom-color: #f3f3f3;
}

.emotion-2[data-placement^='bottom'] .emotion-1::before {
  border-bottom-color: rgba(12,13,13,0.15);
  margin-left: -7px;
}

.emotion-2[data-placement^='left'] .emotion-1::after,
.emotion-2[data-placement^='left'] .emotion-1::before {
  left: 100%;
  top: 50%;
}

.emotion-2[data-placement^='left'] .emotion-1::after {
  border-left-color: #f3f3f3;
  margin-top: -6px;
}

.emotion-2[data-placement^='left'] .emotion-1::after {
  border-left-color: #f3f3f3;
}

.emotion-2[data-placement^='left'] .emotion-1::before {
  border-left-color: rgba(12,13,13,0.15);
  margin-top: -7px;
}

.emotion-2[data-placement^='right'] .emotion-1::after,
.emotion-2[data-placement^='right'] .emotion-1::before {
  right: 100%;
  top: 50%;
}

.emotion-2[data-placement^='right'] .emotion-1::after {
  border-right-color: #f3f3f3;
  margin-top: -6px;
}

.emotion-2[data-placement^='right'] .emotion-1::after {
  border-right-color: #f3f3f3;
}

.emotion-2[data-placement^='right'] .emotion-1::before {
  border-right-color: rgba(12,13,13,0.15);
  margin-top: -7px;
}

.emotion-2[data-placement='top-start'] .emotion-1::before,
.emotion-2[data-placement='bottom-start'] .emotion-1::before,
.emotion-2[data-placement='top-start'] .emotion-1::after,
.emotion-2[data-placement='bottom-start'] .emotion-1::after {
  left: 18px;
}

.emotion-2[data-placement='left-start'] .emotion-1::before,
.emotion-2[data-placement='right-start'] .emotion-1::before,
.emotion-2[data-placement='left-start'] .emotion-1::after,
.emotion-2[data-placement='right-start'] .emotion-1::after {
  top: 18px;
}

.emotion-2[data-placement='top-end'] .emotion-1::before,
.emotion-2[data-placement='bottom-end'] .emotion-1::before,
.emotion-2[data-placement='top-end'] .emotion-1::after,
.emotion-2[data-placement='bottom-end'] .emotion-1::after {
  left: auto;
  right: 11px;
}

.emotion-2[data-placement='left-end'] .emotion-1::before,
.emotion-2[data-placement='right-end'] .emotion-1::before,
.emotion-2[data-placement='left-end'] .emotion-1::after,
.emotion-2[data-placement='right-end'] .emotion-1::after {
  top: auto;
  bottom: 11px;
}

.emotion-2[data-placement='top-end'] .emotion-1::before,
.emotion-2[data-placement='bottom-end'] .emotion-1::before {
  right: calc(11px - 1px);
}

.emotion-2[data-placement='left-end'] .emotion-1::before,
.emotion-2[data-placement='right-end'] .emotion-1::before {
  bottom: calc(11px - 1px);
}

.emotion-0::after,
.emotion-0::before {
  border: solid transparent;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.emotion-0::after {
  border-width: 6px;
}

.emotion-0::before {
  border-width: 7px;
}

<div
    className="emotion-2 emotion-3"
    data-placement="bottom-end"
  >
    <span>
      Some content
    </span>
    <div
      className="emotion-0 emotion-1"
    />
  </div>,
]
`;

exports[`Popover when placement bottom-start should render correctly opened 1`] = `
Array [
  <button
    className="is-active"
    onClick={[Function]}
    type="button"
  >
    Trigger
  </button>,
  @keyframes animation-0 {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

@keyframes animation-0 {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

.emotion-2 {
  position: absolute;
  background: #f3f3f3;
  border-radius: 0.375rem;
  box-shadow: 0 0 0 0.0625rem rgba(12,13,13,0.15),0 0.1875rem 0.375rem rgba(12,13,13,0.15);
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  -webkit-animation: animation-0 200ms cubic-bezier(0,0,0.2,1) forwards;
  animation: animation-0 200ms cubic-bezier(0,0,0.2,1) forwards;
}

.emotion-2[data-placement^='top'] {
  margin-bottom: 0.75rem;
}

.emotion-2[data-placement^='bottom'] {
  margin-top: 0.75rem;
}

.emotion-2[data-placement^='left'] {
  margin-right: 0.75rem;
}

.emotion-2[data-placement^='right'] {
  margin-left: 0.75rem;
}

.emotion-2::after,
.emotion-2::before {
  border: solid transparent;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.emotion-2[data-placement^='top'] .emotion-1::after,
.emotion-2[data-placement^='top'] .emotion-1::before {
  top: 100%;
  left: 50%;
}

.emotion-2[data-placement^='top'] .emotion-1::after {
  border-top-color: #f3f3f3;
  margin-left: -6px;
}

.emotion-2[data-placement^='top'] .emotion-1::after {
  border-top-color: #f3f3f3;
}

.emotion-2[data-placement^='top'] .emotion-1::before {
  border-top-color: rgba(12,13,13,0.15);
  margin-left: -7px;
}

.emotion-2[data-placement^='bottom'] .emotion-1::after,
.emotion-2[data-placement^='bottom'] .emotion-1::before {
  bottom: 100%;
  left: 50%;
}

.emotion-2[data-placement^='bottom'] .emotion-1::after {
  border-bottom-color: #f3f3f3;
  margin-left: -6px;
}

.emotion-2[data-placement^='bottom'] .emotion-1::after {
  border-bottom-color: #f3f3f3;
}

.emotion-2[data-placement^='bottom'] .emotion-1::before {
  border-bottom-color: rgba(12,13,13,0.15);
  margin-left: -7px;
}

.emotion-2[data-placement^='left'] .emotion-1::after,
.emotion-2[data-placement^='left'] .emotion-1::before {
  left: 100%;
  top: 50%;
}

.emotion-2[data-placement^='left'] .emotion-1::after {
  border-left-color: #f3f3f3;
  margin-top: -6px;
}

.emotion-2[data-placement^='left'] .emotion-1::after {
  border-left-color: #f3f3f3;
}

.emotion-2[data-placement^='left'] .emotion-1::before {
  border-left-color: rgba(12,13,13,0.15);
  margin-top: -7px;
}

.emotion-2[data-placement^='right'] .emotion-1::after,
.emotion-2[data-placement^='right'] .emotion-1::before {
  right: 100%;
  top: 50%;
}

.emotion-2[data-placement^='right'] .emotion-1::after {
  border-right-color: #f3f3f3;
  margin-top: -6px;
}

.emotion-2[data-placement^='right'] .emotion-1::after {
  border-right-color: #f3f3f3;
}

.emotion-2[data-placement^='right'] .emotion-1::before {
  border-right-color: rgba(12,13,13,0.15);
  margin-top: -7px;
}

.emotion-2[data-placement='top-start'] .emotion-1::before,
.emotion-2[data-placement='bottom-start'] .emotion-1::before,
.emotion-2[data-placement='top-start'] .emotion-1::after,
.emotion-2[data-placement='bottom-start'] .emotion-1::after {
  left: 18px;
}

.emotion-2[data-placement='left-start'] .emotion-1::before,
.emotion-2[data-placement='right-start'] .emotion-1::before,
.emotion-2[data-placement='left-start'] .emotion-1::after,
.emotion-2[data-placement='right-start'] .emotion-1::after {
  top: 18px;
}

.emotion-2[data-placement='top-end'] .emotion-1::before,
.emotion-2[data-placement='bottom-end'] .emotion-1::before,
.emotion-2[data-placement='top-end'] .emotion-1::after,
.emotion-2[data-placement='bottom-end'] .emotion-1::after {
  left: auto;
  right: 11px;
}

.emotion-2[data-placement='left-end'] .emotion-1::before,
.emotion-2[data-placement='right-end'] .emotion-1::before,
.emotion-2[data-placement='left-end'] .emotion-1::after,
.emotion-2[data-placement='right-end'] .emotion-1::after {
  top: auto;
  bottom: 11px;
}

.emotion-2[data-placement='top-end'] .emotion-1::before,
.emotion-2[data-placement='bottom-end'] .emotion-1::before {
  right: calc(11px - 1px);
}

.emotion-2[data-placement='left-end'] .emotion-1::before,
.emotion-2[data-placement='right-end'] .emotion-1::before {
  bottom: calc(11px - 1px);
}

.emotion-0::after,
.emotion-0::before {
  border: solid transparent;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.emotion-0::after {
  border-width: 6px;
}

.emotion-0::before {
  border-width: 7px;
}

<div
    className="emotion-2 emotion-3"
    data-placement="bottom-start"
  >
    <span>
      Some content
    </span>
    <div
      className="emotion-0 emotion-1"
    />
  </div>,
]
`;

exports[`Popover when placement left should render correctly opened 1`] = `
Array [
  <button
    className="is-active"
    onClick={[Function]}
    type="button"
  >
    Trigger
  </button>,
  @keyframes animation-0 {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

@keyframes animation-0 {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

.emotion-2 {
  position: absolute;
  background: #f3f3f3;
  border-radius: 0.375rem;
  box-shadow: 0 0 0 0.0625rem rgba(12,13,13,0.15),0 0.1875rem 0.375rem rgba(12,13,13,0.15);
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  -webkit-animation: animation-0 200ms cubic-bezier(0,0,0.2,1) forwards;
  animation: animation-0 200ms cubic-bezier(0,0,0.2,1) forwards;
}

.emotion-2[data-placement^='top'] {
  margin-bottom: 0.75rem;
}

.emotion-2[data-placement^='bottom'] {
  margin-top: 0.75rem;
}

.emotion-2[data-placement^='left'] {
  margin-right: 0.75rem;
}

.emotion-2[data-placement^='right'] {
  margin-left: 0.75rem;
}

.emotion-2::after,
.emotion-2::before {
  border: solid transparent;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.emotion-2[data-placement^='top'] .emotion-1::after,
.emotion-2[data-placement^='top'] .emotion-1::before {
  top: 100%;
  left: 50%;
}

.emotion-2[data-placement^='top'] .emotion-1::after {
  border-top-color: #f3f3f3;
  margin-left: -6px;
}

.emotion-2[data-placement^='top'] .emotion-1::after {
  border-top-color: #f3f3f3;
}

.emotion-2[data-placement^='top'] .emotion-1::before {
  border-top-color: rgba(12,13,13,0.15);
  margin-left: -7px;
}

.emotion-2[data-placement^='bottom'] .emotion-1::after,
.emotion-2[data-placement^='bottom'] .emotion-1::before {
  bottom: 100%;
  left: 50%;
}

.emotion-2[data-placement^='bottom'] .emotion-1::after {
  border-bottom-color: #f3f3f3;
  margin-left: -6px;
}

.emotion-2[data-placement^='bottom'] .emotion-1::after {
  border-bottom-color: #f3f3f3;
}

.emotion-2[data-placement^='bottom'] .emotion-1::before {
  border-bottom-color: rgba(12,13,13,0.15);
  margin-left: -7px;
}

.emotion-2[data-placement^='left'] .emotion-1::after,
.emotion-2[data-placement^='left'] .emotion-1::before {
  left: 100%;
  top: 50%;
}

.emotion-2[data-placement^='left'] .emotion-1::after {
  border-left-color: #f3f3f3;
  margin-top: -6px;
}

.emotion-2[data-placement^='left'] .emotion-1::after {
  border-left-color: #f3f3f3;
}

.emotion-2[data-placement^='left'] .emotion-1::before {
  border-left-color: rgba(12,13,13,0.15);
  margin-top: -7px;
}

.emotion-2[data-placement^='right'] .emotion-1::after,
.emotion-2[data-placement^='right'] .emotion-1::before {
  right: 100%;
  top: 50%;
}

.emotion-2[data-placement^='right'] .emotion-1::after {
  border-right-color: #f3f3f3;
  margin-top: -6px;
}

.emotion-2[data-placement^='right'] .emotion-1::after {
  border-right-color: #f3f3f3;
}

.emotion-2[data-placement^='right'] .emotion-1::before {
  border-right-color: rgba(12,13,13,0.15);
  margin-top: -7px;
}

.emotion-2[data-placement='top-start'] .emotion-1::before,
.emotion-2[data-placement='bottom-start'] .emotion-1::before,
.emotion-2[data-placement='top-start'] .emotion-1::after,
.emotion-2[data-placement='bottom-start'] .emotion-1::after {
  left: 18px;
}

.emotion-2[data-placement='left-start'] .emotion-1::before,
.emotion-2[data-placement='right-start'] .emotion-1::before,
.emotion-2[data-placement='left-start'] .emotion-1::after,
.emotion-2[data-placement='right-start'] .emotion-1::after {
  top: 18px;
}

.emotion-2[data-placement='top-end'] .emotion-1::before,
.emotion-2[data-placement='bottom-end'] .emotion-1::before,
.emotion-2[data-placement='top-end'] .emotion-1::after,
.emotion-2[data-placement='bottom-end'] .emotion-1::after {
  left: auto;
  right: 11px;
}

.emotion-2[data-placement='left-end'] .emotion-1::before,
.emotion-2[data-placement='right-end'] .emotion-1::before,
.emotion-2[data-placement='left-end'] .emotion-1::after,
.emotion-2[data-placement='right-end'] .emotion-1::after {
  top: auto;
  bottom: 11px;
}

.emotion-2[data-placement='top-end'] .emotion-1::before,
.emotion-2[data-placement='bottom-end'] .emotion-1::before {
  right: calc(11px - 1px);
}

.emotion-2[data-placement='left-end'] .emotion-1::before,
.emotion-2[data-placement='right-end'] .emotion-1::before {
  bottom: calc(11px - 1px);
}

.emotion-0::after,
.emotion-0::before {
  border: solid transparent;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.emotion-0::after {
  border-width: 6px;
}

.emotion-0::before {
  border-width: 7px;
}

<div
    className="emotion-2 emotion-3"
    data-placement="left"
  >
    <span>
      Some content
    </span>
    <div
      className="emotion-0 emotion-1"
    />
  </div>,
]
`;

exports[`Popover when placement right should render correctly opened 1`] = `
Array [
  <button
    className="is-active"
    onClick={[Function]}
    type="button"
  >
    Trigger
  </button>,
  @keyframes animation-0 {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

@keyframes animation-0 {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

.emotion-2 {
  position: absolute;
  background: #f3f3f3;
  border-radius: 0.375rem;
  box-shadow: 0 0 0 0.0625rem rgba(12,13,13,0.15),0 0.1875rem 0.375rem rgba(12,13,13,0.15);
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  -webkit-animation: animation-0 200ms cubic-bezier(0,0,0.2,1) forwards;
  animation: animation-0 200ms cubic-bezier(0,0,0.2,1) forwards;
}

.emotion-2[data-placement^='top'] {
  margin-bottom: 0.75rem;
}

.emotion-2[data-placement^='bottom'] {
  margin-top: 0.75rem;
}

.emotion-2[data-placement^='left'] {
  margin-right: 0.75rem;
}

.emotion-2[data-placement^='right'] {
  margin-left: 0.75rem;
}

.emotion-2::after,
.emotion-2::before {
  border: solid transparent;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.emotion-2[data-placement^='top'] .emotion-1::after,
.emotion-2[data-placement^='top'] .emotion-1::before {
  top: 100%;
  left: 50%;
}

.emotion-2[data-placement^='top'] .emotion-1::after {
  border-top-color: #f3f3f3;
  margin-left: -6px;
}

.emotion-2[data-placement^='top'] .emotion-1::after {
  border-top-color: #f3f3f3;
}

.emotion-2[data-placement^='top'] .emotion-1::before {
  border-top-color: rgba(12,13,13,0.15);
  margin-left: -7px;
}

.emotion-2[data-placement^='bottom'] .emotion-1::after,
.emotion-2[data-placement^='bottom'] .emotion-1::before {
  bottom: 100%;
  left: 50%;
}

.emotion-2[data-placement^='bottom'] .emotion-1::after {
  border-bottom-color: #f3f3f3;
  margin-left: -6px;
}

.emotion-2[data-placement^='bottom'] .emotion-1::after {
  border-bottom-color: #f3f3f3;
}

.emotion-2[data-placement^='bottom'] .emotion-1::before {
  border-bottom-color: rgba(12,13,13,0.15);
  margin-left: -7px;
}

.emotion-2[data-placement^='left'] .emotion-1::after,
.emotion-2[data-placement^='left'] .emotion-1::before {
  left: 100%;
  top: 50%;
}

.emotion-2[data-placement^='left'] .emotion-1::after {
  border-left-color: #f3f3f3;
  margin-top: -6px;
}

.emotion-2[data-placement^='left'] .emotion-1::after {
  border-left-color: #f3f3f3;
}

.emotion-2[data-placement^='left'] .emotion-1::before {
  border-left-color: rgba(12,13,13,0.15);
  margin-top: -7px;
}

.emotion-2[data-placement^='right'] .emotion-1::after,
.emotion-2[data-placement^='right'] .emotion-1::before {
  right: 100%;
  top: 50%;
}

.emotion-2[data-placement^='right'] .emotion-1::after {
  border-right-color: #f3f3f3;
  margin-top: -6px;
}

.emotion-2[data-placement^='right'] .emotion-1::after {
  border-right-color: #f3f3f3;
}

.emotion-2[data-placement^='right'] .emotion-1::before {
  border-right-color: rgba(12,13,13,0.15);
  margin-top: -7px;
}

.emotion-2[data-placement='top-start'] .emotion-1::before,
.emotion-2[data-placement='bottom-start'] .emotion-1::before,
.emotion-2[data-placement='top-start'] .emotion-1::after,
.emotion-2[data-placement='bottom-start'] .emotion-1::after {
  left: 18px;
}

.emotion-2[data-placement='left-start'] .emotion-1::before,
.emotion-2[data-placement='right-start'] .emotion-1::before,
.emotion-2[data-placement='left-start'] .emotion-1::after,
.emotion-2[data-placement='right-start'] .emotion-1::after {
  top: 18px;
}

.emotion-2[data-placement='top-end'] .emotion-1::before,
.emotion-2[data-placement='bottom-end'] .emotion-1::before,
.emotion-2[data-placement='top-end'] .emotion-1::after,
.emotion-2[data-placement='bottom-end'] .emotion-1::after {
  left: auto;
  right: 11px;
}

.emotion-2[data-placement='left-end'] .emotion-1::before,
.emotion-2[data-placement='right-end'] .emotion-1::before,
.emotion-2[data-placement='left-end'] .emotion-1::after,
.emotion-2[data-placement='right-end'] .emotion-1::after {
  top: auto;
  bottom: 11px;
}

.emotion-2[data-placement='top-end'] .emotion-1::before,
.emotion-2[data-placement='bottom-end'] .emotion-1::before {
  right: calc(11px - 1px);
}

.emotion-2[data-placement='left-end'] .emotion-1::before,
.emotion-2[data-placement='right-end'] .emotion-1::before {
  bottom: calc(11px - 1px);
}

.emotion-0::after,
.emotion-0::before {
  border: solid transparent;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.emotion-0::after {
  border-width: 6px;
}

.emotion-0::before {
  border-width: 7px;
}

<div
    className="emotion-2 emotion-3"
    data-placement="right"
  >
    <span>
      Some content
    </span>
    <div
      className="emotion-0 emotion-1"
    />
  </div>,
]
`;

exports[`Popover when placement top should render correctly opened 1`] = `
Array [
  <button
    className="is-active"
    onClick={[Function]}
    type="button"
  >
    Trigger
  </button>,
  @keyframes animation-0 {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

@keyframes animation-0 {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

.emotion-2 {
  position: absolute;
  background: #f3f3f3;
  border-radius: 0.375rem;
  box-shadow: 0 0 0 0.0625rem rgba(12,13,13,0.15),0 0.1875rem 0.375rem rgba(12,13,13,0.15);
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  -webkit-animation: animation-0 200ms cubic-bezier(0,0,0.2,1) forwards;
  animation: animation-0 200ms cubic-bezier(0,0,0.2,1) forwards;
}

.emotion-2[data-placement^='top'] {
  margin-bottom: 0.75rem;
}

.emotion-2[data-placement^='bottom'] {
  margin-top: 0.75rem;
}

.emotion-2[data-placement^='left'] {
  margin-right: 0.75rem;
}

.emotion-2[data-placement^='right'] {
  margin-left: 0.75rem;
}

.emotion-2::after,
.emotion-2::before {
  border: solid transparent;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.emotion-2[data-placement^='top'] .emotion-1::after,
.emotion-2[data-placement^='top'] .emotion-1::before {
  top: 100%;
  left: 50%;
}

.emotion-2[data-placement^='top'] .emotion-1::after {
  border-top-color: #f3f3f3;
  margin-left: -6px;
}

.emotion-2[data-placement^='top'] .emotion-1::after {
  border-top-color: #f3f3f3;
}

.emotion-2[data-placement^='top'] .emotion-1::before {
  border-top-color: rgba(12,13,13,0.15);
  margin-left: -7px;
}

.emotion-2[data-placement^='bottom'] .emotion-1::after,
.emotion-2[data-placement^='bottom'] .emotion-1::before {
  bottom: 100%;
  left: 50%;
}

.emotion-2[data-placement^='bottom'] .emotion-1::after {
  border-bottom-color: #f3f3f3;
  margin-left: -6px;
}

.emotion-2[data-placement^='bottom'] .emotion-1::after {
  border-bottom-color: #f3f3f3;
}

.emotion-2[data-placement^='bottom'] .emotion-1::before {
  border-bottom-color: rgba(12,13,13,0.15);
  margin-left: -7px;
}

.emotion-2[data-placement^='left'] .emotion-1::after,
.emotion-2[data-placement^='left'] .emotion-1::before {
  left: 100%;
  top: 50%;
}

.emotion-2[data-placement^='left'] .emotion-1::after {
  border-left-color: #f3f3f3;
  margin-top: -6px;
}

.emotion-2[data-placement^='left'] .emotion-1::after {
  border-left-color: #f3f3f3;
}

.emotion-2[data-placement^='left'] .emotion-1::before {
  border-left-color: rgba(12,13,13,0.15);
  margin-top: -7px;
}

.emotion-2[data-placement^='right'] .emotion-1::after,
.emotion-2[data-placement^='right'] .emotion-1::before {
  right: 100%;
  top: 50%;
}

.emotion-2[data-placement^='right'] .emotion-1::after {
  border-right-color: #f3f3f3;
  margin-top: -6px;
}

.emotion-2[data-placement^='right'] .emotion-1::after {
  border-right-color: #f3f3f3;
}

.emotion-2[data-placement^='right'] .emotion-1::before {
  border-right-color: rgba(12,13,13,0.15);
  margin-top: -7px;
}

.emotion-2[data-placement='top-start'] .emotion-1::before,
.emotion-2[data-placement='bottom-start'] .emotion-1::before,
.emotion-2[data-placement='top-start'] .emotion-1::after,
.emotion-2[data-placement='bottom-start'] .emotion-1::after {
  left: 18px;
}

.emotion-2[data-placement='left-start'] .emotion-1::before,
.emotion-2[data-placement='right-start'] .emotion-1::before,
.emotion-2[data-placement='left-start'] .emotion-1::after,
.emotion-2[data-placement='right-start'] .emotion-1::after {
  top: 18px;
}

.emotion-2[data-placement='top-end'] .emotion-1::before,
.emotion-2[data-placement='bottom-end'] .emotion-1::before,
.emotion-2[data-placement='top-end'] .emotion-1::after,
.emotion-2[data-placement='bottom-end'] .emotion-1::after {
  left: auto;
  right: 11px;
}

.emotion-2[data-placement='left-end'] .emotion-1::before,
.emotion-2[data-placement='right-end'] .emotion-1::before,
.emotion-2[data-placement='left-end'] .emotion-1::after,
.emotion-2[data-placement='right-end'] .emotion-1::after {
  top: auto;
  bottom: 11px;
}

.emotion-2[data-placement='top-end'] .emotion-1::before,
.emotion-2[data-placement='bottom-end'] .emotion-1::before {
  right: calc(11px - 1px);
}

.emotion-2[data-placement='left-end'] .emotion-1::before,
.emotion-2[data-placement='right-end'] .emotion-1::before {
  bottom: calc(11px - 1px);
}

.emotion-0::after,
.emotion-0::before {
  border: solid transparent;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.emotion-0::after {
  border-width: 6px;
}

.emotion-0::before {
  border-width: 7px;
}

<div
    className="emotion-2 emotion-3"
    data-placement="top"
  >
    <span>
      Some content
    </span>
    <div
      className="emotion-0 emotion-1"
    />
  </div>,
]
`;

exports[`Popover when placement top-end should render correctly opened 1`] = `
Array [
  <button
    className="is-active"
    onClick={[Function]}
    type="button"
  >
    Trigger
  </button>,
  @keyframes animation-0 {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

@keyframes animation-0 {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

.emotion-2 {
  position: absolute;
  background: #f3f3f3;
  border-radius: 0.375rem;
  box-shadow: 0 0 0 0.0625rem rgba(12,13,13,0.15),0 0.1875rem 0.375rem rgba(12,13,13,0.15);
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  -webkit-animation: animation-0 200ms cubic-bezier(0,0,0.2,1) forwards;
  animation: animation-0 200ms cubic-bezier(0,0,0.2,1) forwards;
}

.emotion-2[data-placement^='top'] {
  margin-bottom: 0.75rem;
}

.emotion-2[data-placement^='bottom'] {
  margin-top: 0.75rem;
}

.emotion-2[data-placement^='left'] {
  margin-right: 0.75rem;
}

.emotion-2[data-placement^='right'] {
  margin-left: 0.75rem;
}

.emotion-2::after,
.emotion-2::before {
  border: solid transparent;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.emotion-2[data-placement^='top'] .emotion-1::after,
.emotion-2[data-placement^='top'] .emotion-1::before {
  top: 100%;
  left: 50%;
}

.emotion-2[data-placement^='top'] .emotion-1::after {
  border-top-color: #f3f3f3;
  margin-left: -6px;
}

.emotion-2[data-placement^='top'] .emotion-1::after {
  border-top-color: #f3f3f3;
}

.emotion-2[data-placement^='top'] .emotion-1::before {
  border-top-color: rgba(12,13,13,0.15);
  margin-left: -7px;
}

.emotion-2[data-placement^='bottom'] .emotion-1::after,
.emotion-2[data-placement^='bottom'] .emotion-1::before {
  bottom: 100%;
  left: 50%;
}

.emotion-2[data-placement^='bottom'] .emotion-1::after {
  border-bottom-color: #f3f3f3;
  margin-left: -6px;
}

.emotion-2[data-placement^='bottom'] .emotion-1::after {
  border-bottom-color: #f3f3f3;
}

.emotion-2[data-placement^='bottom'] .emotion-1::before {
  border-bottom-color: rgba(12,13,13,0.15);
  margin-left: -7px;
}

.emotion-2[data-placement^='left'] .emotion-1::after,
.emotion-2[data-placement^='left'] .emotion-1::before {
  left: 100%;
  top: 50%;
}

.emotion-2[data-placement^='left'] .emotion-1::after {
  border-left-color: #f3f3f3;
  margin-top: -6px;
}

.emotion-2[data-placement^='left'] .emotion-1::after {
  border-left-color: #f3f3f3;
}

.emotion-2[data-placement^='left'] .emotion-1::before {
  border-left-color: rgba(12,13,13,0.15);
  margin-top: -7px;
}

.emotion-2[data-placement^='right'] .emotion-1::after,
.emotion-2[data-placement^='right'] .emotion-1::before {
  right: 100%;
  top: 50%;
}

.emotion-2[data-placement^='right'] .emotion-1::after {
  border-right-color: #f3f3f3;
  margin-top: -6px;
}

.emotion-2[data-placement^='right'] .emotion-1::after {
  border-right-color: #f3f3f3;
}

.emotion-2[data-placement^='right'] .emotion-1::before {
  border-right-color: rgba(12,13,13,0.15);
  margin-top: -7px;
}

.emotion-2[data-placement='top-start'] .emotion-1::before,
.emotion-2[data-placement='bottom-start'] .emotion-1::before,
.emotion-2[data-placement='top-start'] .emotion-1::after,
.emotion-2[data-placement='bottom-start'] .emotion-1::after {
  left: 18px;
}

.emotion-2[data-placement='left-start'] .emotion-1::before,
.emotion-2[data-placement='right-start'] .emotion-1::before,
.emotion-2[data-placement='left-start'] .emotion-1::after,
.emotion-2[data-placement='right-start'] .emotion-1::after {
  top: 18px;
}

.emotion-2[data-placement='top-end'] .emotion-1::before,
.emotion-2[data-placement='bottom-end'] .emotion-1::before,
.emotion-2[data-placement='top-end'] .emotion-1::after,
.emotion-2[data-placement='bottom-end'] .emotion-1::after {
  left: auto;
  right: 11px;
}

.emotion-2[data-placement='left-end'] .emotion-1::before,
.emotion-2[data-placement='right-end'] .emotion-1::before,
.emotion-2[data-placement='left-end'] .emotion-1::after,
.emotion-2[data-placement='right-end'] .emotion-1::after {
  top: auto;
  bottom: 11px;
}

.emotion-2[data-placement='top-end'] .emotion-1::before,
.emotion-2[data-placement='bottom-end'] .emotion-1::before {
  right: calc(11px - 1px);
}

.emotion-2[data-placement='left-end'] .emotion-1::before,
.emotion-2[data-placement='right-end'] .emotion-1::before {
  bottom: calc(11px - 1px);
}

.emotion-0::after,
.emotion-0::before {
  border: solid transparent;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.emotion-0::after {
  border-width: 6px;
}

.emotion-0::before {
  border-width: 7px;
}

<div
    className="emotion-2 emotion-3"
    data-placement="top-end"
  >
    <span>
      Some content
    </span>
    <div
      className="emotion-0 emotion-1"
    />
  </div>,
]
`;

exports[`Popover when placement top-start should render correctly opened 1`] = `
Array [
  <button
    className="is-active"
    onClick={[Function]}
    type="button"
  >
    Trigger
  </button>,
  @keyframes animation-0 {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

@keyframes animation-0 {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

.emotion-2 {
  position: absolute;
  background: #f3f3f3;
  border-radius: 0.375rem;
  box-shadow: 0 0 0 0.0625rem rgba(12,13,13,0.15),0 0.1875rem 0.375rem rgba(12,13,13,0.15);
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  -webkit-animation: animation-0 200ms cubic-bezier(0,0,0.2,1) forwards;
  animation: animation-0 200ms cubic-bezier(0,0,0.2,1) forwards;
}

.emotion-2[data-placement^='top'] {
  margin-bottom: 0.75rem;
}

.emotion-2[data-placement^='bottom'] {
  margin-top: 0.75rem;
}

.emotion-2[data-placement^='left'] {
  margin-right: 0.75rem;
}

.emotion-2[data-placement^='right'] {
  margin-left: 0.75rem;
}

.emotion-2::after,
.emotion-2::before {
  border: solid transparent;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.emotion-2[data-placement^='top'] .emotion-1::after,
.emotion-2[data-placement^='top'] .emotion-1::before {
  top: 100%;
  left: 50%;
}

.emotion-2[data-placement^='top'] .emotion-1::after {
  border-top-color: #f3f3f3;
  margin-left: -6px;
}

.emotion-2[data-placement^='top'] .emotion-1::after {
  border-top-color: #f3f3f3;
}

.emotion-2[data-placement^='top'] .emotion-1::before {
  border-top-color: rgba(12,13,13,0.15);
  margin-left: -7px;
}

.emotion-2[data-placement^='bottom'] .emotion-1::after,
.emotion-2[data-placement^='bottom'] .emotion-1::before {
  bottom: 100%;
  left: 50%;
}

.emotion-2[data-placement^='bottom'] .emotion-1::after {
  border-bottom-color: #f3f3f3;
  margin-left: -6px;
}

.emotion-2[data-placement^='bottom'] .emotion-1::after {
  border-bottom-color: #f3f3f3;
}

.emotion-2[data-placement^='bottom'] .emotion-1::before {
  border-bottom-color: rgba(12,13,13,0.15);
  margin-left: -7px;
}

.emotion-2[data-placement^='left'] .emotion-1::after,
.emotion-2[data-placement^='left'] .emotion-1::before {
  left: 100%;
  top: 50%;
}

.emotion-2[data-placement^='left'] .emotion-1::after {
  border-left-color: #f3f3f3;
  margin-top: -6px;
}

.emotion-2[data-placement^='left'] .emotion-1::after {
  border-left-color: #f3f3f3;
}

.emotion-2[data-placement^='left'] .emotion-1::before {
  border-left-color: rgba(12,13,13,0.15);
  margin-top: -7px;
}

.emotion-2[data-placement^='right'] .emotion-1::after,
.emotion-2[data-placement^='right'] .emotion-1::before {
  right: 100%;
  top: 50%;
}

.emotion-2[data-placement^='right'] .emotion-1::after {
  border-right-color: #f3f3f3;
  margin-top: -6px;
}

.emotion-2[data-placement^='right'] .emotion-1::after {
  border-right-color: #f3f3f3;
}

.emotion-2[data-placement^='right'] .emotion-1::before {
  border-right-color: rgba(12,13,13,0.15);
  margin-top: -7px;
}

.emotion-2[data-placement='top-start'] .emotion-1::before,
.emotion-2[data-placement='bottom-start'] .emotion-1::before,
.emotion-2[data-placement='top-start'] .emotion-1::after,
.emotion-2[data-placement='bottom-start'] .emotion-1::after {
  left: 18px;
}

.emotion-2[data-placement='left-start'] .emotion-1::before,
.emotion-2[data-placement='right-start'] .emotion-1::before,
.emotion-2[data-placement='left-start'] .emotion-1::after,
.emotion-2[data-placement='right-start'] .emotion-1::after {
  top: 18px;
}

.emotion-2[data-placement='top-end'] .emotion-1::before,
.emotion-2[data-placement='bottom-end'] .emotion-1::before,
.emotion-2[data-placement='top-end'] .emotion-1::after,
.emotion-2[data-placement='bottom-end'] .emotion-1::after {
  left: auto;
  right: 11px;
}

.emotion-2[data-placement='left-end'] .emotion-1::before,
.emotion-2[data-placement='right-end'] .emotion-1::before,
.emotion-2[data-placement='left-end'] .emotion-1::after,
.emotion-2[data-placement='right-end'] .emotion-1::after {
  top: auto;
  bottom: 11px;
}

.emotion-2[data-placement='top-end'] .emotion-1::before,
.emotion-2[data-placement='bottom-end'] .emotion-1::before {
  right: calc(11px - 1px);
}

.emotion-2[data-placement='left-end'] .emotion-1::before,
.emotion-2[data-placement='right-end'] .emotion-1::before {
  bottom: calc(11px - 1px);
}

.emotion-0::after,
.emotion-0::before {
  border: solid transparent;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.emotion-0::after {
  border-width: 6px;
}

.emotion-0::before {
  border-width: 7px;
}

<div
    className="emotion-2 emotion-3"
    data-placement="top-start"
  >
    <span>
      Some content
    </span>
    <div
      className="emotion-0 emotion-1"
    />
  </div>,
]
`;
